<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright 2026 Mishmash IO UK Ltd.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.mishmash.test</groupId>
  <artifactId>test-ffm</artifactId>
  <version>1.0.0</version>

  <name>Java Foreign Functions and Memory API examples by mishmash io</name>
  <description>
    This project contains code developed by mishmash io to demonstrate
    various functionalities of the Java Foreign Functions and Memory API (FFM API)
    and related developments.

    It should not be used in production projects or published to artifact
    repositories. It is intended for demonstration only.
  </description>
  <url>https://mishmash.io/open_source/distributed-computing-stacks</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <organization>
    <name>mishmash io</name>
    <url>https://mishmash.io</url>
  </organization>

  <scm>
    <connection>scm:git:https://github.com/mishmash-io/distributed-computing-stacks.git</connection>
    <developerConnection>scm:git:https://github.com/mishmash-io/distributed-computing-stacks.git</developerConnection>
    <url>https://github.com/mishmash-io/distributed-computing-stacks</url>
  </scm>

  <dependencies>
    <dependency>
      <groupId>io.mishmash.stacks.misc</groupId>
      <artifactId>posix-foreign-libc</artifactId>
      <version>1.0.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.16.0</version>
        <configuration>
          <release>25</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.6.3</version>
        <executions>
          <execution>
            <id>run-example</id>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>${java.home}/bin/java</executable>
          <arguments>
            <argument>-cp</argument>
            <classpath/>
            <argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
            <argument>--enable-native-access=ALL-UNNAMED</argument>
            <argument>${mainClass}</argument>
          </arguments>
          <workingDirectory>${project.buid.directory}</workingDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>server</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <mainClass>test.Server</mainClass>
      </properties>
    </profile>
    <profile>
      <id>client</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <mainClass>test.Client</mainClass>
      </properties>
    </profile>
  </profiles>
</project>
